--- a/libraries/tailormade_dls/src/main/res/values/styles.xml
+++ b/libraries/tailormade_dls/src/main/res/values/styles.xml
@@ -135,12 +135,36 @@
         <item name="android:textColor">?colorPrimaryDark</item>
     </style>
 
+    <style name="TextAppearance.TailorMade.Headline2.BlackHigh" parent="TextAppearance.TailorMade.Headline2">
+        <item name="android:textColor">@color/color_black_87</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Headline2.BlackMedium" parent="TextAppearance.TailorMade.Headline2">
+        <item name="android:textColor">@color/color_black_60</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Headline2.BlackLight" parent="TextAppearance.TailorMade.Headline2">
+        <item name="android:textColor">@color/color_black_38</item>
+    </style>
+
     <style name="TextAppearance.TailorMade.Headline3.Primary" parent="TextAppearance.TailorMade.Headline3">
         <item name="android:textColor">?colorPrimary</item>
     </style>
 
     <style name="TextAppearance.TailorMade.Headline3.PrimaryDark" parent="TextAppearance.TailorMade.Headline3">
         <item name="android:textColor">?colorPrimaryDark</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Headline3.BlackHigh" parent="TextAppearance.TailorMade.Headline3">
+        <item name="android:textColor">@color/color_black_87</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Headline3.BlackMedium" parent="TextAppearance.TailorMade.Headline3">
+        <item name="android:textColor">@color/color_black_60</item>
+    </style>
+
+    <style name="TextAppearance.TailorMade.Headline3.BlackLight" parent="TextAppearance.TailorMade.Headline3">
+        <item name="android:textColor">@color/color_black_38</item>
     </style>
 
     <style name="TextAppearance.TailorMade.Body1.Primary" parent="TextAppearance.TailorMade.Body1">
