SETUP-SEARCH-ACTIVITY: Setup viewpager for search result

--- a/features/tailormade_search/src/main/res/layout/activity_search.xml
+++ b/features/tailormade_search/src/main/res/layout/activity_search.xml
@@ -14,7 +14,8 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            >
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/top_toolbar_search"
@@ -29,17 +30,53 @@
             </com.google.android.material.appbar.MaterialToolbar>
         </com.google.android.material.appbar.AppBarLayout>
 
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/nav_host_fragment"
-            android:name="androidx.navigation.fragment.NavHostFragment"
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tab_layout_search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/top_appbar_layout_search"
+            app:tabMode="fixed">
+
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/tab_item_design"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/design_label" />
+
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/tab_item_tailor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tailor_label" />
+
+        </com.google.android.material.tabs.TabLayout>
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/view_pager_search"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="gone"
-            app:defaultNavHost="true"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/top_appbar_layout_search"
-            app:navGraph="@navigation/nav_search_graph" />
+            app:layout_constraintTop_toBottomOf="@id/tab_layout_search">
+
+        </androidx.viewpager2.widget.ViewPager2>
+
+<!--        <androidx.fragment.app.FragmentContainerView-->
+<!--            android:id="@+id/nav_host_fragment"-->
+<!--            android:name="androidx.navigation.fragment.NavHostFragment"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:visibility="gone"-->
+<!--            app:defaultNavHost="true"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/top_appbar_layout_search"-->
+<!--            app:navGraph="@navigation/nav_search_graph" />-->
 
         <ImageView
             android:id="@+id/image_view_search_state"
