SETUP-SORT-AND-FILTER: Optimize styling and add bottom sheet dialog fragment and base for design filter,

--- a/features/tailormade_auth/src/main/res/layout/fragment_select_gender.xml
+++ b/features/tailormade_auth/src/main/res/layout/fragment_select_gender.xml
@@ -65,8 +65,8 @@
 
         <Button
             android:id="@+id/button_submit_gender"
-            style="@style/Theme.TailorMade.Button.Rounded"
             android:layout_width="@dimen/dp_0"
+            android:layout_height="wrap_content"
             android:text="@string/next_label"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
