--- a/features/tailormade_auth/src/main/res/layout/fragment_select_role.xml
+++ b/features/tailormade_auth/src/main/res/layout/fragment_select_role.xml
@@ -59,8 +59,8 @@
 
         <Button
             android:id="@+id/button_submit_role"
-            style="@style/Theme.TailorMade.Button.Rounded"
             android:layout_width="@dimen/dp_0"
+            android:layout_height="wrap_content"
             android:text="@string/next_label"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
