--- a/libraries/tailormade_dls/src/main/res/values-night/themes.xml
+++ b/libraries/tailormade_dls/src/main/res/values-night/themes.xml
@@ -35,6 +35,7 @@
         <item name="toolbarStyle">@style/Widget.MaterialComponents.Toolbar.Surface</item>
         <item name="cardViewStyle">@style/Widget.MaterialComponents.CardView</item>
         <item name="buttonStyle">@style/Theme.TailorMade.Button.Rounded</item>
+        <item name="materialButtonStyle">@style/Theme.TailorMade.Button.Rounded</item>
         <item name="materialButtonOutlinedStyle">@style/Theme.TailorMade.Button.Outlined.Rounded</item>
         <item name="materialCardViewStyle">@style/Widget.MaterialComponents.CardView</item>
         <item name="tabStyle">@style/Widget.MaterialComponents.TabLayout</item>
