--- a/features/tailormade_search/src/main/res/layout/layout_sort_and_filter.xml
+++ b/features/tailormade_search/src/main/res/layout/layout_sort_and_filter.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <HorizontalScrollView
         android:id="@+id/scroll_view_sort_and_filter"
