--- a/features/tailormade_search/src/main/res/layout/fragment_search_design_result.xml
+++ b/features/tailormade_search/src/main/res/layout/fragment_search_design_result.xml
@@ -31,7 +31,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="ContentDescription" />
+                tools:ignore="ContentDescription"
+                tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/text_view_no_design_data_state"
@@ -39,12 +40,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_24"
-                android:text="@string/search_state"
+                android:text="@string/search_no_data_state"
                 android:visibility="gone"
                 app:layout_constraintBottom_toTopOf="@+id/text_view_no_design_data_description_state"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/image_view_no_design_data_state" />
+                app:layout_constraintTop_toBottomOf="@+id/image_view_no_design_data_state"
+                tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/text_view_no_design_data_description_state"
@@ -52,11 +54,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_16"
-                android:text="@string/search_description_state"
+                android:text="@string/search_description_no_data_state"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/text_view_no_design_data_state" />
+                app:layout_constraintTop_toBottomOf="@+id/text_view_no_design_data_state"
+                tools:visibility="visible" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
