--- a/features/tailormade_search/src/main/res/layout/fragment_search_tailor_result.xml
+++ b/features/tailormade_search/src/main/res/layout/fragment_search_tailor_result.xml
@@ -31,7 +31,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="ContentDescription" />
+                tools:ignore="ContentDescription"
+                tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/text_view_no_tailor_data_state"
@@ -44,7 +45,8 @@
                 app:layout_constraintBottom_toTopOf="@+id/text_view_no_tailor_data_description_state"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/image_view_no_tailor_data_state" />
+                app:layout_constraintTop_toBottomOf="@+id/image_view_no_tailor_data_state"
+                tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/text_view_no_tailor_data_description_state"
@@ -56,7 +58,8 @@
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/text_view_no_tailor_data_state" />
+                app:layout_constraintTop_toBottomOf="@+id/text_view_no_tailor_data_state"
+                tools:visibility="visible" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
