SETUP-CHAT-LIST: Setup listener to chat room firebase
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/libraries/tailormade_dls/src/main/res/layout/layout_card_chat.xml
+++ b/libraries/tailormade_dls/src/main/res/layout/layout_card_chat.xml
@@ -55,6 +55,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <include
+            android:id="@+id/layout_badge"
             layout="@layout/layout_badge"
             android:layout_width="8dp"
             android:layout_height="8dp"
