SETUP-CHAT-ROOM: Setup chat room layout
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/libraries/tailormade_dls/src/main/res/values/styles.xml
+++ b/libraries/tailormade_dls/src/main/res/values/styles.xml
@@ -296,6 +296,10 @@
         <item name="boxBackgroundColor">?colorSurface</item>
     </style>
 
+    <style name="Theme.TailorMade.TextInputLayout.OutlinedBox" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="shapeAppearanceOverlay">@style/Theme.TailorMade.CornerRounded.All</item>
+    </style>
+
     <!-- Toolbar -->
     <style name="Theme.TailorMade.Toolbar" parent="Widget.MaterialComponents.Toolbar.Surface">
         <item name="titleTextAppearance">?textAppearanceHeadline4</item>
