--- a/features/tailormade_search/src/main/res/layout/fragment_category_list.xml
+++ b/features/tailormade_search/src/main/res/layout/fragment_category_list.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".feature.filter.view.CategoryListFragment">
 
-    <FrameLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_category_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".feature.filter.view.CategoryListFragment">
+        android:layout_height="wrap_content" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view_category_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </FrameLayout>
-</layout>
+</LinearLayout>
