--- a/features/tailormade_profile/src/main/res/layout/fragment_edit_profile_set_location.xml
+++ b/features/tailormade_profile/src/main/res/layout/fragment_edit_profile_set_location.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".feature.editProfile.view.EditProfileSetLocationFragment">
 
-    <FrameLayout
+    <org.osmdroid.views.MapView
+        android:id="@+id/map_view_edit_profile"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".feature.editProfile.view.EditProfileSetLocationFragment">
+        android:layout_height="match_parent" />
 
-        <org.osmdroid.views.MapView
-            android:id="@+id/map_view_edit_profile"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </FrameLayout>
-</layout>
+</FrameLayout>
